# direct-hal

./: .gitmodules  CMakeLists.txt  README.md
examples/demo/: CMakeLists.txt  STM32U575ZITXQ_FLASH.ld  main.cpp
interface/hal/: compilation_error.h
interface/hal/gpio/: GpioAlternateFunctionPin.h  GpioConfiguration.h  GpioInputPin.h  GpioOutputPin.h
source/: RegisterSet.h
source/gpio/: GpioAlternateFunctionPin.cpp  GpioInputPin.cpp  GpioOutputPin.cpp  GpioPort.h  GpioPortRegisters.h  GpioPorts.h
source/gpio/platform_specific/stm32u5/: GpioPorts.h  Lqfp144.h
source/rcc/platform_specific/stm32u5/: Rcc.h  RccRegisters.h
source/register/: Register.h
source/register/platform_specific/arm_cortex_m/: RegisterInstructions.h
source/register/platform_specific/arm_cortex_m0/: RegisterInstructions.h
